--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/pg-adapter": "^1.9.1",
     "@google/genai": "^1.3.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/pg": "^8.15.4",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "formidable": "^3.5.4",
     "lucide-react": "^0.511.0",
     "mime": "^4.0.7",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
+    "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
