--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
-# Environment variables for local development
-# Copy this to .env.local and modify as needed
+# Environment variables for development and production
+# Copy this to .env (for local development) or .env.local
 
-# Database connection (when using Docker Compose for DB only)
+# Database connection
+# For local development with Docker DB: postgresql://postgres:password@localhost:5432/splitwise_db
+# For full Docker deployment: postgresql://postgres:password@db:5432/splitwise_db
 DATABASE_URL=postgresql://postgres:password@localhost:5432/splitwise_db
 
 # Next.js configuration
 NODE_ENV=development
 PORT=3000
 
-# Optional: Add other environment variables as needed
-# NEXTAUTH_SECRET=your-secret-key-here
-# NEXTAUTH_URL=http://localhost:3000
+# NextAuth configuration (required for authentication)
+NEXTAUTH_SECRET=your-secret-key-here-generate-a-new-one
+NEXTAUTH_URL=http://localhost:3000
