--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,23 @@
 node_modules
 .next
 npm-debug.log
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*.local
+
+# Git files
+.git
+.gitignore
+
+# Documentation
+README.md
+*.md
+
+# Editor files
+.vscode
+.idea
