--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 name: splitwise_clone
-version: "3.8"
 services:
   db:
     image: postgres:16
@@ -11,7 +10,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
   app:
     build: .
     ports:
@@ -20,6 +18,9 @@ services:
       - db
     environment:
       DATABASE_URL: postgresql://postgres:password@db:5432/splitwise_db
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
+      NODE_ENV: production
 
 volumes:
   postgres_data:
